<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_karyawan"
        android:padding="10dp"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="2.5dp"
        card_view:cardBackgroundColor="@color/background_material_light"
        >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tv_nama_karyawan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_karyawan"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_margin="6dp"
        android:textColor="#D61839"
        />

    <TextView
        android:id="@+id/tv_jabatan_karyawan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jabatan_karyawan"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_margin="6dp"
        android:textColor="#D61839"
        />

    <TextView
        android:id="@+id/tv_jk_karyawan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jk_karyawan"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_margin="6dp"
        android:textColor="#D61839"
        />

    <TextView
        android:id="@+id/tv_gaji_karyawan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gaji_karyawan"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_margin="6dp"
        android:textColor="#D61839"
        />

    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>